plugins {
    id "java"
}

subprojects {
    apply plugin: "java"

    group = "pickjob.cloud"
    version = "0.0.1"

    configurations {
        implementation {
            exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
            exclude group: "ch.qos.logback", module: "logback-classic"
        }
    }

    dependencies {
        // logging
        implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
        implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
        implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
        implementation "com.lmax:disruptor:3.4.2"
        // apache commons
        implementation "org.apache.commons:commons-lang3:3.8"
        // spring web starter
        implementation "org.springframework.boot:spring-boot-starter-web"
        implementation "org.springframework.boot:spring-boot-starter-actuator"
    }


    compileJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    compileTestJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    repositories {
        maven {
            url "https://maven.aliyun.com/repository/public"
        }
        jcenter()
        mavenCentral()
    }
}